# AudioConverter

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/me/hd/audioconverter/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/io/github/copylibs/audiolib/: MainActivity.kt
app/src/main/java/me/hd/audioconverter/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/me/hd/audioconverter/: ExampleUnitTest.kt
audiolib/: build.gradle.kts
audiolib/src/main/cpp/: CMakeLists.txt  audio.cpp  main.cpp
audiolib/src/main/cpp/audio/: LameCoder.cpp  LameCoder.h  SilkCoder.cpp  SilkCoder.h
audiolib/src/main/cpp/lame/: CMakeLists.txt
audiolib/src/main/cpp/lame/lame-3.100/include/: lame.h
audiolib/src/main/cpp/lame/lame-3.100/libmp3lame/: id3tag.c  mpglib_interface.c
audiolib/src/main/cpp/lame/lame-3.100/mpglib/: decode_i386.c
audiolib/src/main/cpp/native/: AudioNative.cpp  AudioNative.h
audiolib/src/main/cpp/silk/: CMakeLists.txt
audiolib/src/main/cpp/utils/: log.h
audiolib/src/main/java/me/hd/audioconverter/: AudioUtil.kt
audiolib/src/main/java/me/hd/audioconverter/native/: AudioNative.kt
audiolib/src/main/java/me/hd/audioconverter/util/: AudioUtil.kt
audiolib/src/main/java/me/hd/audiolib/native/: AudioNative.kt
audiolib/src/main/java/me/hd/audiolib/util/: AudioUtil.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+2 files in other folders)
